# WEB_HW_13_2

./: README.md  pyproject.toml  start.cmd  start.py
app/: settings.py  urls.py
app/templates/app/: index.html
authors/migrations/: 0001_initial.py
css/: bootstrap.min.css  main.css  pico.min.css
data/: authors.json  quotes.json
quotes/migrations/: 0001_initial.py
quotes/templates/quotes/: base.html  index.html
quotes/templates/quotes/components/: quote.html
users/: forms.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_delete_profile.py
users/templates/users/: index.html
